fix header in mr overflow, fix condition to show service fee, fix can't click X to close modal

--- a/app/assets/stylesheets/agency_admin_maintenance_request/show.scss
+++ b/app/assets/stylesheets/agency_admin_maintenance_request/show.scss
@@ -13,6 +13,13 @@ $color-text: #83878C;
 
 .new-ui {
   .new-ui-maintenance-request.summary-container-index {
+    .main-summary {
+      .mr-detail {
+        .main-information {
+          margin-top: 20px;
+        }
+      }
+    }
     .item-maintenance-request {
       position: relative;
       .show-settings {
